fix: following broken on some users